--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -260,6 +260,9 @@
               </button>
             </div>
             }
+
+            <!-- Invisible trigger for Intersection Observer to detect scroll-to-bottom -->
+            <div class="load-more-trigger" aria-hidden="true"></div>
             }
             <!-- @else {
                       <div class="no-events">
