--- a/src/app/pages/people/people.component.scss
+++ b/src/app/pages/people/people.component.scss
@@ -446,3 +446,17 @@
 ::ng-deep .mat-mdc-menu-panel.filter-menu {
   max-width: none !important;
 }
+
+// Load more button container
+.load-more-container {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  margin-top: 1rem;
+
+  button {
+    mat-icon {
+      margin-right: 0.5rem;
+    }
+  }
+}
